# song-masher-ai

./: .gitattributes  LICENSE  README.md  demo_script.md  er.name Your Name
backend/: Dockerfile  analysis.py  analysis_simple.py  gradio_app.py  gradio_app_simple.py  main.py  main_simple.py  models.py  planning.py  pyproject.toml  render.py  requirements-windows.txt  requirements.txt  schemas.py  separation.py  settings.py  storage.py  tasks.py
backend/tests/: test_beats.py  test_key.py  test_plan.py  test_render_smoke.py
frontend/: .eslintrc.json  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/.next/: trace
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AnalysisCard.tsx  FileDrop.tsx  MixPlanner.tsx  RenderPanel.tsx  Timeline.tsx  Waveform.tsx
frontend/src/state/: useMashStore.ts
frontend/src/utils/: format.ts
infra/: Dockerfile.api  Dockerfile.web  Dockerfile.worker  docker-compose.yml  env.example
